src/objects/SFDC_Purchase_Order__c.object
<CustomObject>
    <description>The Purchase Order is an order to a vendor comprised of Line Items all going to one shipping location.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>R00N30000001NaBGEA0</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Expedite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expedite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PO_Amount__c</fullName>
        <label>PO Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PO_Date__c</fullName>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Location__c</fullName>
        <label>Ship-To Location</label>
        <picklist>
            <picklistValues>
                <fullName>Corporate - San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chicago Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denver Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seattle Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>AllPOs</fullName>
        <columns>NAME</columns>
        <columns>PO_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Account__c</columns>
        <columns>Ship_To_Location__c</columns>
        <columns>PO_Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All POs</label>
    </listViews>
    <listViews>
        <fullName>NewPOs_d_2</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>PO_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>PO_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New PO&apos;s</label>
    </listViews>
    <nameField>
        <displayFormat>PO{00000}</displayFormat>
        <label>Purchase Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>